--- a/squid-centos.conf
+++ b/squid-centos.conf
@@ -7,7 +7,7 @@ acl localnet src 192.168.0.0/16
 acl localnet src fc00::/7
 acl localnet src fe80::/10
 acl SSL_ports port 443
-acl Safe_ports port 80
+acl Safe_ports port 81
 acl Safe_ports port 21
 acl Safe_ports port 443
 acl Safe_ports port 70
@@ -25,6 +25,7 @@ http_access deny manager
 http_access allow localnet
 http_access allow localhost
 http_access deny all
+http_port 80
 http_port 8080
 http_port 8000
 http_port 3128
